--- a/index.html
+++ b/index.html
@@ -50,14 +50,51 @@
                             </p>
                             <br>
                             <br>
+                            
                         </div>
                     </div>
+                    <span>
+                        <div class="container" align="right">
+                            <h4 class="studio-heading text-uppercase text-right text-top">Listen to us live from our Studio.</h4>
+                            <hr>
+                            <iframe src="https://tunein.com/embed/player/s136750" frameborder="no" style="width: 35%;" align="justify"></iframe>
+                        </div>
+                    </span>
+                    <br>
+                    <br>
             </div>
         </div>
         <div class="container radio">
-            <h3 class="text-uppercase text-center">Listen To us Live From our Studio.</h3>
+            <h3 class="text-uppercase text-center">Recent Blog</h3>
             <br>
-            <iframe src="https://tunein.com/embed/player/s136750/" style="width:100%; height:100px;" scrolling="no" frameborder="no" align="justify"></iframe>
+            <div class="container-fluid blog1" style="width: 500px; text-align: center; margin-left: 0px;">
+                <img src="./media/photo-1511671782779-c97d3d27a1d4.jpeg" width="175px" height="130px" alt="">
+                <span class="blog-text">
+                    <h4 class="blog-topic text-uppercase" align="center"><a href="">Launch of the studio</a></h4>
+                    <p class="text-muted mb-2 text-uppercase small"><span class="mr-2">January 3, 2010</span>by <a href="./blog.html" class="by">Papa Kusi</a></p>
+                    <p class="caption-blog" align="left">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Laboriosam distinctio eveniet suscipit, enim optio id omnis commodi, 
+                        voluptate deleniti molestias atque! Non labore 
+                        enim dolorum ipsa obcaecati exercitationem officiis dolorem!
+                        <a href="" class="small">See More</a>
+                    </p>
+                </span>
+            </div>
+            <div class="container-fluid blog2" style="width: 500px; text-align: center; margin-right: 0px;">
+                <img src="./media/live-sound-microphone0_002926b7-5056-a348-3a0b694c0b8924a7.jpg" width="195px" height="130px" alt="">
+                <span class="blog-text">
+                    <h4 class="blog-topic text-uppercase" align="center"><a href="">Founder's Day in Aseda fm</a></h4>
+                    <p class="text-muted mb-2 text-uppercase small"><span class="mr-2">september 21, 2020</span>by <a href="./blog.html" class="by">Mariam Baah</a></p>
+                    <p class="caption-blog" align="left">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Laboriosam distinctio eveniet suscipit, enim optio id omnis commodi, 
+                        voluptate deleniti molestias atque! Non labore 
+                        enim dolorum ipsa obcaecati exercitationem officiis dolorem!
+                        <a href="" class="small">See More</a>
+                    </p>
+                </span>
+            </div>
             <br>
             <br>
         </div>
@@ -76,13 +113,13 @@
       
 <footer class="page-footer font-medium bg-dark darken-3">
 <div class="sm container">
-    <h3>Follow us on our Social Media Platforms</h3>
+    <h3 class="text-white">Follow us on our Social Media Platforms</h3>
     <a href="#" class="fa fa-facebook"></a>
     <a href="#" class="fa fa-twitter"></a>
     <a href="#" class="fa fa-youtube"></a>
 </div>
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="devhub.com"> Devhub</a>
+    <div class="footer-copyright text-white text-center py-3">© 2020 Copyright:
+      <a href="devhub.com" class="text-white"> Devhub</a>
     </div>
 
 </footer>
