--- a/about.html
+++ b/about.html
@@ -6,7 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
+<header id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky">
+        <img class="logo" id="logo" src="./media/WhatsApp Image 2019-12-27 at 18.15.38.jpeg" height="120px"
+            width="200px" alt="">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+            <ul class="nav_link" id="navbar-right">
+                <li class="nav-item active">
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="blog.html">Blog</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
+</header>
+
     
 </body>
 </html>
