--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <header id="navbar">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky">
-            <img class="logo" id="logo" src="./media/WhatsApp Image 2019-12-27 at 18.15.38.jpeg" height="120px" width="200px" alt="">
+            <img class="logo" src="./media/WhatsApp Image 2019-12-27 at 18.15.38.jpeg" height="120px" width="200px" alt="">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 
-            <ul class="nav_link"id="navbar-right">
+            <ul class="nav_link">
                 <li class="nav-item active">
                     <a  href="index.html">Home</a>
                 </li>
@@ -110,7 +110,7 @@
       </main>
       
 <footer class="page-footer font-medium bg-dark darken-3">
-<div class="sm container">
+<div class="socialMediaIcon">
     <h3 class="text-white">Follow us on our Social Media Platforms</h3>
     <a href="#" class="fa fa-facebook"></a>
     <a href="#" class="fa fa-twitter"></a>
