--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
       <main>
         <div class="site-section bg-image overlay" style="background-image: url('./media/photo-1511671782779-c97d3d27a1d4.jpeg');">
-            <div class="container" id="#home">
+            <div class="container_welcome">
                     <div class="row">
                         <div class="col-md-6 white-text text-center text-md-left mt-xl-5" data-wow-delay="0.3s">
                             <h1 class="h1-responsive font-weight-bold text-uppercase mt-sm-5 text-center">Welcome To Aseda Radio</h1>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <span>
-                        <div class="container" align="right">
+                        <div class="radioPlayer" >
                             <h4 class="studio-heading text-uppercase text-right text-top">Listen to us live from our Studio.</h4>
                             <hr>
                             <iframe src="https://tunein.com/embed/player/s136750" frameborder="no" style="width: 35%;" align="justify"></iframe>
@@ -62,10 +62,10 @@
                     <br>
             </div>
         </div>
-        <div class="container radio">
-            <h3 class="text-uppercase text-center">Recent Blog</h3>
+        <div class="container_radio">
+            <h3 class="blog_title">Recent Blog</h3>
             <br>
-            <div class="container-fluid blog1" style="width: 500px; text-align: center; margin-left: 0px;">
+            <div class="blog1" >
                 <img src="./media/photo-1511671782779-c97d3d27a1d4.jpeg" width="175px" height="130px" alt="">
                 <span class="blog-text">
                     <h4 class="blog-topic text-uppercase" align="center"><a href="">Launch of the studio</a></h4>
@@ -79,7 +79,7 @@
                     </p>
                 </span>
             </div>
-            <div class="container-fluid blog2" style="width: 500px; text-align: center; margin-right: 0px;">
+            <div class="blog2" >
                 <img src="./media/live-sound-microphone0_002926b7-5056-a348-3a0b694c0b8924a7.jpg" width="195px" height="130px" alt="">
                 <span class="blog-text">
                     <h4 class="blog-topic text-uppercase" align="center"><a href="">Founder's Day in Aseda fm</a></h4>
