--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header id="navbar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky">
+        <nav class="navbar navbar-expand-lg bg-dark sticky">
             <img class="logo" src="./media/WhatsApp Image 2019-12-27 at 18.15.38.jpeg" height="120px" width="200px" alt="">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
         <div class="site-section bg-image overlay" style="background-image: url('./media/photo-1511671782779-c97d3d27a1d4.jpeg');">
             <div class="container_welcome">
                     <div class="row">
-                        <div class="col-md-6 white-text text-center text-md-left mt-xl-5" data-wow-delay="0.3s">
+                        <div class="welcome" >
                             <h1 class="h1-responsive font-weight-bold text-uppercase mt-sm-5 text-center">Welcome To Aseda Radio</h1>
                             <hr class="hr-light" width="100%">
                             <p class="caption text-white">
@@ -52,8 +52,8 @@
                         </div>
                     </div>
                     <span>
-                        <div class="radioPlayer" >
-                            <h4 class="studio-heading text-uppercase text-right text-top">Listen to us live from our Studio.</h4>
+                       <div class="radioPlayer" >
+                            <h4 class="studio-heading text-uppercase text-right text-top">Join us Live from our studio.</h4>
                             <hr>
                             <iframe src="https://tunein.com/embed/player/s136750" frameborder="no" style="width: 35%;" align="justify"></iframe>
                         </div>
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="container_radio">
-            <h3 class="blog_title">Recent Blog</h3>
+            <h3 class="blog_title text-center">Recent Blog</h3>
             <br>
             <div class="blog1" >
                 <img src="./media/photo-1511671782779-c97d3d27a1d4.jpeg" width="175px" height="130px" alt="">
