--- a/schedule.html
+++ b/schedule.html
@@ -56,7 +56,18 @@
 
                 </div>
             </div>
-          
+            <span>
+                <div class="radioPlayer">
+                    <h4 class="studio-heading text-uppercase text-right text-top">Join us Live from our studio.</h4>
+                    <frameset rows="80,*" frameborder="no" border="4px" framespacing="4px">
+                        <frame src="https://tunein.com/embed/player/s136750" name="topFrame" scrolling="No"
+                            noresize="noresize" id="topFrame" title="musicFrame" />
+                        <!--Music Player-->
+                    </frameset>
+                    <iframe src="https://tunein.com/embed/player/s136750" frameborder="no" style="width: 35%;"
+                        align="justify"></iframe>
+                </div>
+            </span>
             <br>
             <br>
         </div>
